[tool.poetry]
name = "tmp-coinwatch"
version = "0.1.0"
description = "Tool for Detecting Cloned Vulnerabilities"
authors = ["Matus Remen"]
license = "MIT"
readme = "README.md"
packages = [{include = "tmp_coinwatch"}]

[tool.poetry.dependencies]
python = "~3.11"
click = "^8.1.3"
requests = "^2.28.2"
nltk = "^3.8.1"
strsim = "^0.0.3"
structlog = "^22.3"
sqlalchemy = "^2.0.6"
psycopg2-binary = "^2.9.5"
fastapi = "^0.95.1"
orjson = "^3.8.10"
uvicorn = "^0.21.1"
redis = "^4.5.4"
rq = "^1.13.0"
python-crontab = "^2.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
